chore: fix link and contrast

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -348,7 +348,7 @@ section {
       }
       a {
         text-decoration: none;
-        color: rgb(243, 97, 29);
+        color: #d04400;
         border: 0;
         box-sizing: border-box;
       }
